CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(LMdatabase)

AUX_SOURCE_DIRECTORY(./src SRC)


INCLUDE_DIRECTORIES(inc ${TD_ROOT_DIR}/deps/zlib-1.2.11/inc ${TD_ROOT_DIR}/deps/zstd-1.4.4/lib)
			
ADD_LIBRARY(edb ${SRC})
SET_TARGET_PROPERTIES(edb PROPERTIES CLEAN_DIRECT_OUTPUT 1)
			
TARGET_LINK_LIBRARIES(edb tutil z)  


 


